@@ -39,3 +39,5 @@ buildNumber.properties
 .settings/
 .classpath
 .project
+
+ToDo.txt
